# ai-agents.team

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
src/ai_agents_team/: app.py  run.py
src/ai_agents_team/static/css/: custom.css
src/ai_agents_team/templates/: index.html
